# ComfyUI_FluxPromptGen

./: README.md  flux_image_caption_node.py  pyproject.toml  requirements.txt
ComfyUI_FluxPromptGen/: __init__.py  app.py  flux_prompt_generator_node.py
ComfyUI_FluxPromptGen/data/: additional_details.json  artform.json  artist.json  clothing.json  device.json  digital_artform.json  hairstyles.json  lighting.json  photography_styles.json  place.json  roles.json
data/: background.json  body_types.json  composition.json  default_tags.json  photo_framing.json  photo_type.json  photographer.json  pose.json
